test/should-fail/检查类型-2.j
native bad takes nothing returns undef
